remove readinessProbe from registry-buddy
- registry-buddy only listens on localhost since it does not do auth(n/z)
checks for clients; this means that the kubelet is not able to reach it
when doing its readiness/liveness probe checks
- this was "working" previously because the readiness check probe was
connecting to the Istio sidecar instead of the registry-buddy, we noticed
issues once switching to a non-mesh ingress solution (like Contour)
- it is fine to remove this probe since the registry-buddy will crash if
its TCP server dies so the default process liveness checks of Kubernetes should suffice
- this also adds an `INDEX` environment variable to the worker
deployment since its readiness server is hardcoded to only run when
INDEX=1 for BOSH compatibility reasons
- addresses #91

[#175388005](https://www.pivotaltracker.com/story/show/175388005)

Co-authored-by: Tim Downey <tdowney@vmware.com>
Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>

--- a/templates/deployment_updater_deployment.yml
+++ b/templates/deployment_updater_deployment.yml
@@ -29,6 +29,8 @@ spec:
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
           command: [ "/cnb/process/deployment-updater" ]
+          ports:
+          - containerPort: 4445
           env:
           - name: CLOUD_CONTROLLER_NG_CONFIG
             value: #@ ccng_config_mount_path
