--- a/templates/clock_deployment.yml
+++ b/templates/clock_deployment.yml
@@ -29,6 +29,8 @@ spec:
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
           command: [ "/cnb/process/clock" ]
+          ports:
+          - containerPort: 4446
           env:
           - name: CLOUD_CONTROLLER_NG_CONFIG
             value: #@ ccng_config_mount_path
