Add resource limits to containers without them
[#175864498]

Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Matt Royal <mroyal@vmware.com>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -84,6 +84,13 @@ spec:
         - name: registry-buddy
           image: #@ data.values.images.registry_buddy
           imagePullPolicy: Always
+          resources:
+            requests:
+              cpu: 500m
+              memory: 15Mi
+            limits:
+              cpu: 15000m
+              memory: 150Mi
           volumeMounts:
           - name: tmp-packages
             mountPath: /tmp/packages
