--- a/templates/ccdb-migrate-job.yaml
+++ b/templates/ccdb-migrate-job.yaml
@@ -23,6 +23,13 @@ spec:
           value: #@ ccng_config_mount_path
         - name: CLOUD_CONTROLLER_NG_SECRETS
           value: #@ ccng_secrets_mount_path
+        resources:
+          requests:
+            cpu: 300m
+            memory: 300Mi
+          limits:
+            cpu: 1000m
+            memory: 1Gi
         volumeMounts:
         - #@ template.replace(shared_config_volume_mounts())
         #@ if/end data.values.ccdb.ca_cert:
