Update dev scripts to use Ruby 2.7
- CCNG updated to using Ruby 2.7 recently

Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>
Co-authored-by: Andrew Wittrock <awittrock@vmware.com>

--- a/dev-templates/kbld.yml
+++ b/dev-templates/kbld.yml
@@ -10,6 +10,9 @@ sources:
         builder: paketobuildpacks/builder:full
         buildpacks:
           - gcr.io/paketo-buildpacks/ruby
+        rawOptions:
+          - "--env"
+          - "BP_MRI_VERSION=2.7.*"
   - imageRepo: #@ data.values.kbld.destination.ccng
     path: #@ data.values.src_dirs.ccng
     pack: *ccngPackConfig
