Build the nginx image from the latest capi-release
- move the nginx command args from the docker image to the deployment
container template

[#176852320](https://www.pivotaltracker.com/story/show/176852320)

Co-authored-by: Dave Walter <walterda@vmware.com>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -111,6 +111,11 @@ spec:
           ports:
           - containerPort: 80
           - containerPort: 9023
+          args:
+          - "-g"
+          - "daemon off;"
+          - "-c"
+          - "/etc/nginx/nginx.conf"
           readinessProbe:
             httpGet:
               port: 80
@@ -166,4 +171,3 @@ spec:
         emptyDir: {}
       - name: tmp-packages
         emptyDir: {}
-
