--- a/dockerfiles/nginx/Dockerfile
+++ b/dockerfiles/nginx/Dockerfile
@@ -1,23 +1,7 @@
-FROM ubuntu:bionic
+FROM ubuntu:bionic AS nginx-compiler
 
-RUN mkdir -p /nginx
-WORKDIR /nginx
-COPY *.tar.gz ./
-COPY *.patch ./
-
-# install only what is needed to run everything but `./configure` for build optimization
 RUN apt-get update && apt-get install -y \
-  patch
-
-RUN tar xzvf nginx-upload-module-2.3.0.tar.gz
-RUN cd nginx-upload-module-2.3.0 && \
-  patch < ../upload_module_put_support.patch
-
-RUN tar xzvf nginx-1.16.1.tar.gz
-RUN tar xzvf pcre-8.42.tar.gz
-
-# install whatever is needed for "./configure"
-RUN apt-get install -y \
+  patch \
   gcc \
   g++ \
   libssl-dev \
@@ -25,17 +9,21 @@ RUN apt-get install -y \
   openssl \
   zlibc \
   zlib1g \
-  zlib1g-dev
+  zlib1g-dev \
+  wget
 
-RUN cd nginx-1.16.1 && \
-  ./configure \
-    --with-debug \
-    --with-pcre=../pcre-8.42 \
-    --add-module=../nginx-upload-module-2.3.0 && \
-  make -j $(nproc) && \
-  make -j $(nproc) install
+WORKDIR /capi-release-dir
+COPY build.sh .
+RUN ./build.sh
+
+FROM ubuntu:bionic
+
+RUN apt-get update && apt-get install -y \
+  openssl
+
+COPY --from=nginx-compiler /usr/local/nginx /usr/local/nginx
 
 RUN groupadd -g 1000 cnb
 RUN useradd -r -u 1000 -g 1000 cnb
 
-CMD ["/usr/local/nginx/sbin/nginx", "-g", "daemon off;", "-c", "/etc/nginx/nginx.conf" ]
+ENTRYPOINT [ "/usr/local/nginx/sbin/nginx" ]
