FIX: Adjust default memory/cpu requests and limits
There's been evidence that the Cloud Controller API and registry-buddy
components have been getting OOMKilled under typical usage in production
environments. This change adjusts the resource limits to be more in line
with what our monit limits historically were in the capi-release BOSH
release. E.g. https://github.com/cloudfoundry/capi-release/blob/6f9b4d5ec3ba46adf39d7de2d60e1b58a4511784/jobs/cloud_controller_ng/spec#L893

This change also adjusts some of the CPU limits to be more generous for
critical processes such as nginx and the cf-api-controllers reconciler.

[#177468691](https://www.pivotaltracker.com/story/show/177468691)

Authored-by: Tim Downey <tdowney@vmware.com>

--- a/config/controllers_deployment.yml
+++ b/config/controllers_deployment.yml
@@ -43,11 +43,11 @@ spec:
           value: #@ data.values.workloads_namespace
         resources:
           limits:
-            cpu: 100m
-            memory: 200Mi
+            cpu: 1000m
+            memory: 1Gi
           requests:
             cpu: 100m
-            memory: 50Mi
+            memory: 100Mi
         volumeMounts:
           - name: uaa-client-secret
             mountPath: /config/uaa_client_secret
@@ -68,7 +68,7 @@ spec:
         resources:
           requests:
             cpu: 10m
-            memory: 50Mi
+            memory: 25Mi
           limits:
             cpu: 500m
             memory: 1Gi
