Add livenessProbes to cf-api-server and nginx containers
- The previous readinessProbe for nginx was mostly testing the
  cf-api-server container. The new tcpSocket check just ensures that the
  nginx server is listening on port 80. If this isn't true, it will now
  restart the container instead of just cutting off routing to the pod.

- The cf-api-server container doesn't expose any ports, so we instead
  exec curl over the socket it exposes for nginx. This still tests the
  /healthz endpoint like the nginx readinessProbe before.

- Note: the /healthz endpoint doesn't exercise the database, so the
  container still won't restart if there is a database-related issue.

- Note: previously traffic would not route to the pod if the /healthz
  endpoint responded with an error, but the containers would not restart.
  Now the containers will actually restart (and traffic also won't be
  routed while they're down). One consequence of this is that the
  cf-api-server container will be killed with work in flight if it
  becomes overwhelmed (say with more than 20 concurrent requests).

- We started with a solution that also used startupProbes, but that was
  causing the cf-api-server container to take over 30 seconds to start,
  even though the container was already healthy.

- We weren't able to reproduce the problem described in the Github
  issue, but this work was inspired by the issue.

[#176848778](https://www.pivotaltracker.com/story/show/176848778)

Co-authored-by: Matt Royal <mroyal@vmware.com>
Co-authored-by: Andrew Costa <ancosta@vmware.com>

--- a/config/api_server_deployment.yml
+++ b/config/api_server_deployment.yml
@@ -44,6 +44,16 @@ spec:
             limits:
               cpu: 1000m
               memory: 4Gi
+          livenessProbe:
+            exec:
+              command:
+                - curl
+                - --unix-socket
+                - /data/cloud_controller_ng/cloud_controller.sock
+                - -f
+                - http://ignored-host/healthz
+            initialDelaySeconds: 5
+            periodSeconds: 5
           volumeMounts:
           - #@ template.replace(shared_config_volume_mounts())
           - name: server-sock
@@ -111,10 +121,11 @@ spec:
           ports:
           - containerPort: 80
           - containerPort: 9023
-          readinessProbe:
-            httpGet:
+          livenessProbe:
+            tcpSocket:
               port: 80
-              path: "/healthz"
+            periodSeconds: 5
+            initialDelaySeconds: 5
           resources:
             requests:
               cpu: 100m
