--- a/config/api_server_deployment.yml
+++ b/config/api_server_deployment.yml
@@ -101,10 +101,21 @@ spec:
             limits:
               cpu: 1500m
               memory: 1Gi
+          livenessProbe:
+            exec:
+              command:
+              - curl
+              - --silent
+              - --fail
+              - --show-error
+              - localhost:8080/healthz
+            initialDelaySeconds: 5
           volumeMounts:
           - name: tmp-packages
             mountPath: /tmp/packages
           env:
+          - name: REGISTRY_BASE_PATH
+            value: #@ data.values.kpack.registry.repository_prefix
           - name: REGISTRY_USERNAME
             valueFrom:
               secretKeyRef:
