--- a/config/worker_deployment.yml
+++ b/config/worker_deployment.yml
@@ -57,6 +57,8 @@ spec:
           image: #@ data.values.images.registry_buddy
           imagePullPolicy: Always
           env:
+            - name: REGISTRY_BASE_PATH
+              value: #@ data.values.kpack.registry.repository_prefix
             - name: REGISTRY_USERNAME
               valueFrom:
                 secretKeyRef:
@@ -67,6 +69,15 @@ spec:
                 secretKeyRef:
                   name: cc-package-registry-upload-secret
                   key: password
+          livenessProbe:
+            exec:
+              command:
+              - curl
+              - --silent
+              - --fail
+              - --show-error
+              - localhost:8080/healthz
+            initialDelaySeconds: 5
           resources:
             requests:
               cpu: 500m
