Fix up pipeline and task references to cf-for-k8s-ci
- These now live in this repo

[#178201752](https://www.pivotaltracker.com/story/show/178201752)
[#178221948](https://www.pivotaltracker.com/story/show/178221948)
[#178187943](https://www.pivotaltracker.com/story/show/178187943)
[#178187941](https://www.pivotaltracker.com/story/show/178187941)

Co-authored-by: Tim Downey <tdowney@vmware.com>

--- a/ci/cf-api.yml
+++ b/ci/cf-api.yml
@@ -470,6 +470,7 @@ jobs:
     - get: capi-k8s-release-except-images
       trigger: true
     - get: capi-k8s-release
+    - get: capi-k8s-release-ci
     - get: cf-for-k8s-ci
     - get: capi-bara-tests
     - get: cf-for-k8s
