--- a/ci/tasks/run-baras.yml
+++ b/ci/tasks/run-baras.yml
@@ -8,12 +8,13 @@ image_resource:
 
 inputs:
   - name: cf-for-k8s-ci
+  - name: capi-k8s-release-ci
   - name: capi-bara-tests
   - name: integration-config
   - name: pool-lock
 
 run:
-  path: cf-for-k8s-ci/ci/tasks/cake/run-baras.sh
+  path: capi-k8s-release-ci/ci/tasks/run-baras.sh
 
 params:
   # - Required
