--- a/ci/cf-api.yml
+++ b/ci/cf-api.yml
@@ -463,6 +463,7 @@ jobs:
 # TODO: rename this later
 - name: cf-api-tests
   public: true
+  serial: true
   plan:
   - in_parallel:
     - get: cloud-controller-ng
