Ensure clusters are unclaimed after test run
- Many claimed clusters waiting around from commits to
cloud_controller_ng.
- Not garbage collected for 5 days, so ensuring they are torn down
seemed the best course.

Co-authored-by: Dave Walter <walterda@vmware.com>

--- a/ci/cf-api.yml
+++ b/ci/cf-api.yml
@@ -675,7 +675,8 @@ jobs:
           params:
             text: '[capi-bara-tests] #capi @interrupt OH NO! Failed when running on cf-for-k8s, pls send help'
             icon_emoji: ":sick-kubo:"
-  on_success:
+  # Changed to unclaim cluster. We are unlikely to be debugging failed run clusters at this point.
+  ensure:
     do:
     - task: delete-cf
       file: cf-for-k8s-ci/ci/tasks/delete-cf/task.yml
