--- a/config/ccng-config.lib.yml
+++ b/config/ccng-config.lib.yml
@@ -110,6 +110,8 @@ db: &db
   ssl_verify_hostname: false
   #@ end
 
+log_audit_events: false
+
 telemetry_log_path: "/dev/null"
 log_cache:
   url: #@ "https://log-cache.{}".format(data.values.system_domain)
@@ -136,6 +138,10 @@ staging:
 
 default_health_check_timeout: 60
 maximum_health_check_timeout: 180
+
+broker_client_default_async_poll_interval_seconds: 60
+broker_client_max_async_poll_duration_minutes: 10080
+broker_client_async_poll_exponential_backoff_rate: 1.0
 
 stacks_file: config/stacks.yml
 
@@ -252,8 +258,10 @@ bits_service:
 
 rate_limiter:
   enabled: false
-  general_limit: 2000
-  unauthenticated_limit: 100
+  per_process_general_limit: 2000
+  global_general_limit: 2000
+  per_process_unauthenticated_limit: 100
+  global_unauthenticated_limit: 1000
   reset_interval_in_minutes: 60
 
 opi:
